--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,4 +3,8 @@
 
 @import "./base/reset";
 
-@import "./block/navbar";
+@import "./block/header";
+@import "./block/models";
+@import "./block/section3";
+@import "./block/links";
+@import "./block/footer";
